@@ -237,11 +237,23 @@
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;
           m.parentNode.insertBefore(a,m)
         })(window, document,
-          'script', '//www.google-analytics.com/analytics.js','ga');
+          'script', '//www.google-analytics.com/analytics.js', 'ga');
 
+        /* General initialization */
         ga('create', '{{ google_analytics[0] }}', '{{ google_analytics[1] }}');
         ga('set', 'anonymizeIp', true);
         ga('send', 'pageview');
+
+        /* Track outbound links */
+        var buttons = document.querySelectorAll('a');
+        Array.prototype.map.call(buttons, function(item) {
+          if (item.host != window.location.host) {
+            item.addEventListener('click', function() {
+              var action = item.getAttribute('data-action') || 'follow';
+              ga('send', 'event', 'outbound', action, item.href);
+            });
+          }
+        });
       </script>
     {% endif %}
   </body>
