@@ -1,6 +1,9 @@
 mkdocs-material-0.x.x (2016-xx-xx)
 
+  * Fixed webfont delivery problem when hosted in subdirectories
+  * Added option to configure fonts in mkdocs.yml with fallbacks
   * Set download link to latest version if available
+  * Set up tracking of outgoing links and actions for Google Analytics
 
 mkdocs-material-0.1.1 (2016-02-11)
 
